# ML-ObesityLevels

./: .gitignore  Dockerfile  README.md  data_insight_and_training.ipynb  pyproject.toml  requirements.txt
mlobesitylevels/: constants.py  dataloader.py  preprocessor.py  trainer.py  validators.py
scripts/: score.py  test_api.py  train.py  validation.py
