[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlobesitylevels"
version = "0.1.0"
description = "A machine learning project for obesity levels prediction"
authors = [
    {name = "Chxresubles"}
]
requires-python = ">=3.7"
keywords = ["machine learning", "obesity", "health", "kaggle"]
dependencies = [
    "fastapi==0.115.12",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "uvicorn==0.34.0",
]

[tool.setuptools.packages.find]
include = ["mlobesitylevels*"]
exclude = ["data*", "catboost_info*", "output*", "scripts*"]
